--- a/page_3.html
+++ b/page_3.html
@@ -15,6 +15,23 @@
 	 <td> Australien <td>
 	 </tr>
 	 <tr>
-	 
+	 <td> Belgien <td>
+	 </tr>
+	 <tr>
+	 <td> Brasilien <td>
+	 </tr>
+	 <tr>
+	 <td> China <td>
+	 </tr>
+	 <tr>
+	 <td> Deutschland <td>
+	 </tr>
+	 <tr>
+	 <td> Frankreich <td>
+	 </tr>
+	 <tr>
+	 <td> Italien <td>
+	 </tr>
+	 <tr>
 </body> 
 </html>
